[gd_scene load_steps=16 format=3 uid="uid://dq4wxx50popab"]

[ext_resource type="PackedScene" uid="uid://4kiudc8l5et7" path="res://scenes/levels/level_game.tscn" id="1_74csv"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_qf60e"]
[ext_resource type="Theme" uid="uid://cuoi10cy8jtag" path="res://gui/global_theme.tres" id="3_3pisj"]
[ext_resource type="PackedScene" uid="uid://ducixpui7mxkg" path="res://gui/game_over/game_over.tscn" id="3_aai4t"]
[ext_resource type="Texture2D" uid="uid://dodkdjfaidqhp" path="res://entities/pipe/assets/coin.png" id="3_b6csf"]
[ext_resource type="Texture2D" uid="uid://bgw7av2ke4ewf" path="res://gui/common/icon-cursor-12x15.png" id="3_jfnw1"]
[ext_resource type="Texture2D" uid="uid://dkgfxulcf3apc" path="res://gui/common/text-start-33x15.png" id="4_5dnvy"]
[ext_resource type="PackedScene" uid="uid://mjrmw406uwak" path="res://gui/common/fade.tscn" id="4_7lkdv"]

[sub_resource type="Animation" id="Animation_nmxdr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10.5, 18.5)]
}

[sub_resource type="Animation" id="Animation_ksok2"]
resource_name = "hand_bob"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10.5, 18.5), Vector2(10.5, 23.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ajw6"]
_data = {
"RESET": SubResource("Animation_nmxdr"),
"hand_bob": SubResource("Animation_ksok2")
}

[sub_resource type="LabelSettings" id="LabelSettings_51x72"]
font_size = 8
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_c2v08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jbu8c"]
resource_name = "flash"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aqyfe"]
_data = {
"RESET": SubResource("Animation_c2v08"),
"flash": SubResource("Animation_jbu8c")
}

[node name="Game" type="Node"]
process_mode = 3
script = ExtResource("1_qf60e")

[node name="LevelGame" parent="." instance=ExtResource("1_74csv")]
process_mode = 1

[node name="Tutorial" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Text" type="TextureRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -7.5
offset_right = 16.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_5dnvy")

[node name="Icon" type="TextureRect" parent="Tutorial/Text"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.5
offset_top = 18.5
offset_right = 22.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("3_jfnw1")

[node name="HandAnimator" type="AnimationPlayer" parent="Tutorial/Text"]
autoplay = "hand_bob"
libraries = {
"": SubResource("AnimationLibrary_2ajw6")
}

[node name="Scoretable" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="CoinIcon" type="TextureRect" parent="Scoretable"]
layout_mode = 0
offset_left = -11.0
offset_top = 5.0
offset_right = 5.0
offset_bottom = 20.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b6csf")
expand_mode = 1
stretch_mode = 1

[node name="Score" type="Label" parent="Scoretable"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 20.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_3pisj")
theme_override_font_sizes/font_size = 0
text = "0"
label_settings = SubResource("LabelSettings_51x72")
vertical_alignment = 1

[node name="Flash" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FlashAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aqyfe")
}

[node name="GameOver" parent="." instance=ExtResource("3_aai4t")]

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Fade" parent="." instance=ExtResource("4_7lkdv")]

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
